Updated index.html with a new line

--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
 <head>
 <title>Hello Git!</title>
-<link rel="stylesheet" href="bluestyle.css">
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <h1>Hello Welcome to Git world!</h1>
 <p>This is the first file in my new Git Repo.</p>
-
+<p>A new line in our file!</p>
 </body>
 </html>
