--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
 <h1>Hello Welcome to Git world!</h1>
+<div>
+    <img src="https://res.cloudinary.com/practicaldev/image/fetch/s--bjpVKHPe--/c_imagga_scale,f_auto,fl_progressive,h_420,q_auto,w_1000/https://dev-to-uploads.s3.amazonaws.com/i/8ogqpfkvqqpyfbs3w6p7.png" style="width:100%;max-width:960px">
+</div>
 <p>This is the first file in my new Git Repo.</p>
 <p>A new line in our file!</p>
 </body>
