added new image

--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
 </div>
 <p>This is the first file in my new Git Repo.</p>
 <p>A new line in our file!</p>
+<div>
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT_VBtLprIYiqgKoKFBSLE82JJic1KJRuMDjR4E2pEtVQ&s" style="width:100%;max-width:960px">
+</div>
 </body>
 </html>
